# ecdysis

./: .gitignore  Cargo.toml  Makefile  README.md  RELEASE_NOTES  cliff.toml
.github/workflows/: ecdysis.yml
examples/: tokio_echo.rs
integration_tests/: Cargo.toml  Dockerfile  Makefile  docker-compose.yaml  rustfmt.toml
integration_tests/tests/: test.rs
src/: executioner.rs  inheriter.rs  lib.rs  listener.rs  registry.rs  seqpacket.rs  utils.rs
src/tokio_ecdysis/: mod.rs  supervisor.rs  systemd_notify.rs  systemd_sockets.rs  trigger.rs
