[package]
name = "ecdysis"
description = "A library for graceful restarts in Rust."
version = "1.0.0-final-internal"
authors = ["Argo Smart Routing & Orpheus Team at Cloudflare, Inc."]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/cloudflare/ecdysis"
exclude = ["integration_tests"]
readme = "README.md"

[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-prefix = ""
publish = false
pre-release-hook = ["git-cliff", "-o", "RELEASE_NOTES", "--tag", "{{version}}"]

[features]
default = ["tokio_ecdysis"]
systemd = ["systemd_notify", "systemd_sockets"]
systemd_notify = ["tokio_ecdysis"]
systemd_sockets = ["tokio_ecdysis"]
tokio_ecdysis = ["dep:futures", "dep:tokio", "dep:tokio-stream"]

[dependencies]
bincode = "1.3.3"
bytes = "1.6.0"
derive_more = { version = "1.0.0", features = ["from", "display"] }
futures = { version = "0.3", optional = true, features = ["alloc"] }
log = "0.4"
nix = "0.26"
os_pipe = "1.1.5"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
socket2 = "0.5"
tempfile = "3.10.1"
tokio = { version = "1.37.0", optional = true, features = ["signal", "macros", "net", "fs"] }
tokio-stream = { version = "0.1", optional = true, features = ["net", "signal", "sync"] }
tokio-util = { version = "0.7", features = ["net", "codec"] }

[target.'cfg(target_os = "linux")'.dependencies]
tokio-seqpacket = "0.7"

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "io-util"] }
waitgroup = "0.1"

[[example]]
name = "tokio_echo"
required-features = ["tokio_ecdysis", "systemd_sockets"]
